agrego las rutas dinamicas

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <!---
+      <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+      <style>html{filter: invert(1);}</style>
+    -->
+    <link rel="stylesheet" href="./globals.css">
     <title>MJD-Router</title>
-    <style>html{filter: invert(1);}</style>
   </head>
   <body>
     <div id="root"></div>
