--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/signpost.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!---
-      <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-      <style>html{filter: invert(1);}</style>
-    -->
     <link rel="stylesheet" href="./globals.css">
     <title>MJD-Router</title>
   </head>
